# speakright-desktop

./: AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  biome.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  audio_provider_request.md  bug_report.md  config.yml  feature_request.md  ipa_audit.md
.github/workflows/: build-windows.yml  docs.yml
apps/browser/: .env.example  .gitignore  README.md  biome.json  next.config.ts  package-lock.json  package.json  vitest.config.ts
docs/: INSTALLATION.md  RELEASE_NOTES_v1.0.1.md  WEB.md  api-reference.md
docs/browser-edition/: ARCHITECTURE_AND_SEPARATION.md  COMPLETION_AUDIT.md  IMPLEMENTATION_PLAN.md  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  VALIDATION_AND_RELEASE.md  VALIDATION_LOG.md
docs/operations/: DESKTOP_STARTUP_RUNBOOK.md  FRENCH_ASSESSMENT_AUDIO_POLICY_TABLE.md  FRENCH_PHONOLOGY_INVENTORY_TABLE.md  FRENCH_PHONOLOGY_OPTIMIZATION_PLAN.md  IPA_DISPLAY_AUDIT_STRATEGY.md  (+16 more)
scripts/: browser-azure-live-log.mjs  check-doc-links.mjs  compress-videos.mjs  desktop-artifact-smoke.mjs  desktop-build.mjs  desktop-launch-release.mjs  desktop-preflight.mjs  desktop-release-gate.mjs  desktop-smoke.mjs  desktop-ui-smoke.mjs  export-assessment-audio-policy-tables.mjs  generate-word-audio.mjs  release-size-audit.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+640 files in other folders)
