[package]
name = "speakright"
version = "1.0.1"
description = "AI-powered American English pronunciation coach"
authors = ["SpeakRight"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "speakright_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
keyring = { version = "3.6.3", features = ["apple-native", "sync-secret-service", "windows-native"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2.5.7"
tauri-plugin-store = "2.4.2"
